2016.10.26, Version 2.0.3 (BETA)

    - Replaced logging failed ping to prevent unhandled error msg. (issue #2)

2016.10.23, Version 2.0.2 (BETA)

    - Fixed bug in re-connect loop. (issue #1)

2016.10.18, Version 2.0.1 (BETA)

    - Fixed bug in connector loop

2016.10.17, Version 2.0.0 (BETA)

    - Initial twisted version for communication with SiriDB 2.0.x
